chore: upgrade to Java 21