@@ -34,10 +34,40 @@ IF NOT ERRORLEVEL 1 (set java_version=9)
 ECHO %java_fullversion% | find " full version ""10" > NUL
 IF NOT ERRORLEVEL 1 (set java_version=10)
 
+ECHO %java_fullversion% | find " full version ""11" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=11)
+
+ECHO %java_fullversion% | find " full version ""12" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=12)
+
+ECHO %java_fullversion% | find " full version ""13" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=13)
+
+ECHO %java_fullversion% | find " full version ""14" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=14)
+
+ECHO %java_fullversion% | find " full version ""15" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=15)
+
+ECHO %java_fullversion% | find " full version ""16" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=16)
+
+ECHO %java_fullversion% | find " full version ""17" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=17)
+
+ECHO %java_fullversion% | find " full version ""18" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=18)
+
+ECHO %java_fullversion% | find " full version ""19" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=19)
+
+ECHO %java_fullversion% | find " full version ""20" > NUL
+IF NOT ERRORLEVEL 1 (set java_version=20)
+
 IF NOT DEFINED java_version (set java_version=0)
 
 IF %java_version% NEQ 0 (
-    ECHO [ERROR] Kestra require at least Java 11.. 1>&2
+    ECHO [ERROR] Kestra require at least Java 21.. 1>&2
     EXIT 1
 )
 
@@ -46,7 +76,7 @@ REM Opens java.util due to https://github.com/Azure/azure-sdk-for-java/issues/27
 REM Opens java.lang due to https://github.com/kestra-io/kestra/issues/1755, see https://github.com/micronaut-projects/micronaut-core/issues/9573
 SET "JAVA_ADD_OPENS=--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED"
 
-java %JAVA_OPTS% %JAVA_ADD_OPENS% -jar "%this%" %*
+java %JAVA_OPTS% %JAVA_ADD_OPENS% -Djava.security.manager=allow -jar "%this%" %*
 
 ENDLOCAL
 
